# vlc_robot_sugar_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: sugar_perception.yaml  sugar_record.yaml
launch/: sugar_bridge.launch.py  sugar_perception.launch.py  sugar_record.launch.py
robot_sugar/: DATASET.md  husky_table.json  sugar_infer_standalone.py  sugar_ros_bridge.py  sugar_scene_banana.json
robot_sugar/dataset/: sugar_dataset_recorder.py
robot_sugar/perception/: __init__.py  sugar_perception_node.py
robot_sugar/robo3d/configs/: default.py
robot_sugar/robo3d/models/: clip_encoder.py  pct_pretrain.py
robot_sugar/utils/: io_utils.py  pc_utils.py  tf_utils.py
